--- a/HTML/index.css
+++ b/HTML/index.css
@@ -1,1 +1,12 @@
 /* Arranged in order of apperance */
+
+@import url(//fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap);
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+
+}
