--- a/HTML/Task2/index.css
+++ b/HTML/Task2/index.css
@@ -16,5 +16,22 @@
     overflow: hidden;
     
  }
+
+ .container {
+    background-image:    url('./assets/img/bg1.png'),
+                         url('./assets/img/bg2.png'), 
+                         url('./assets/img/bg3.png'), 
+                         url('./assets/img/bg4.png'), 
+                         url('./assets/img/bg0.png');
+
+    background-size: 15%, 15%, 15%, 15%, 100%;
+    background-position:    left -1% top -15%, 
+                            right -7.5% top -1%, 
+                            left -5% bottom -10%, 
+                            right -5% bottom -5%, 
+                            center;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat;
+    overflow: auto;
+ }
  
  
