--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -1,5 +1,12 @@
 /* General style */
+::before, ::after{
+    box-sizing: border-box;
+}
 
+body{
+    margin: 0;
+    line-height: 1.5;
+}
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +15,7 @@
     text-decoration: none;
     align-content: none;
 }
+
 
 /* Aside section styles */
 
