--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,500;1,300&display=swap');
+
+
 /* General style */
 ::before, ::after{
     box-sizing: border-box;
@@ -14,15 +17,31 @@ body{
     outline: none;
     text-decoration: none;
     align-content: none;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 
 /* Aside section styles */
 
 aside{
-    width: 300px;
-    background-color: aqua;
+    width: 200px;
+    background-color: rgb(0, 0, 0);
+    font-weight: 300;
+    min-height: 100vh;
+    position: fixed;
+    color: rgb(255, 235, 205);
+    border-right: 1px solid rgb(122, 62, 62);
 }
 
+.section{
+    background-color: rgb(236, 200, 200);
+    color: rgb(0, 0, 0);
+    min-height: 100vh;
 
+}
+
+.content{
+    padding-left: 200px;
+}
 /* Home section styles */
