--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -18,6 +18,8 @@ body{
     text-decoration: none;
     align-content: none;
     font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
 
 }
 
@@ -27,17 +29,45 @@ body{
 aside{
     width: 200px;
     background-color: rgb(0, 0, 0);
-    font-weight: 300;
-    min-height: 100vh;
+    height: 100%;
     position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
     color: rgb(255, 235, 205);
     border-right: 1px solid rgb(122, 62, 62);
+    padding: 30px;
+    
 }
 
+aside .logo{
+    background-color: rgb(122, 62, 62);
+    padding: 30px 0;
+}
+
+aside .logo a{
+    display: inline-block;
+    color: seashell;
+    font-weight: 700;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+nav{
+    list-style: none;
+    background-color: rgb(122, 62, 62);
+    margin: 80px 0;
+}
+
+aside .copyright-text{
+    background-color: rgb(122, 62, 62);
+}
 .section{
     background-color: rgb(236, 200, 200);
     color: rgb(0, 0, 0);
     min-height: 100vh;
+    display: block;
+
 
 }
 
