--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -82,11 +82,37 @@ aside .logo a::after{
     border-right: 4px solid red;
 }
 
-nav{
+aside nav{
     list-style: none;
-    background-color: rgb(122, 62, 62);
-    margin: 80px 0;
+    padding: 0;
+    margin: 60px 0;
 }
+aside nav li {
+    display: block;
+}
+aside nav li a{
+    display: block;
+    font-size: 16px;
+    color: seashell;
+    font-weight: 600;
+    text-decoration: none;
+    line-height: 1.5;
+    border-bottom: 1px solid rgb(122, 62, 62);
+    -webkit-transition: all 0.5 ease-in-out;
+    transition: all 0.5 ease-in-out;
+
+}
+aside nav li a:hover{
+    padding-left: 5px;
+    color: red;
+
+}
+
+aside nav li a .fa{
+    margin-right: 10px;
+}
+
+
 
 aside .copyright-text{
     background-color: rgb(122, 62, 62);
