--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -22,6 +22,30 @@ body{
     font-weight: 400;
 
 }
+.section{
+    background-color: rgb(236, 200, 200);
+    /* color: rgb(0, 0, 0); */
+    min-height: 100vh;
+    display: block;
+    padding: 0 30px;
+
+
+}
+
+.content{
+    padding-left: 270px;
+}
+
+.container{
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;   
+}
+
+.shadow-dark{
+    -webkit-box-shadow: 0 0 20px red;
+    box-shadow: 0 0 20px red;
+}
 
 
 /* Aside section styles */
@@ -82,10 +106,66 @@ aside .logo a::after{
     border-right: 4px solid red;
 }
 
+aside .nav-toggler{
+    height: 40px;
+    width: 40px;
+    border: 1px solid rgb(122, 62, 62);
+    position: fixed;
+    cursor: pointer;
+    left: 300px;
+    top: 30px;
+    z-index: 11;
+    border-radius: 5px;
+    background-color: seashell;
+    /* display: -ms-flexbox;
+    display: flex; */
+    display: none;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+/* content{
+    background-image: image("../imgs/work.jpg");
+    background-size: cover;
+    
+} */
+aside .nav-toggler span{
+    height: 2px;
+    width: 16px;
+    display: inline-block;
+    position: relative;
+}
+
+aside .nav-toggler span::before{
+    content: '';
+    height: 2px;
+    width: 18px;
+    display: inline-block;
+    position: absolute;
+    top: -6px;
+    left: 0;
+}
+aside .nav-toggler span::after{
+    content: '';
+    height: 2px;
+    width: 18px;
+    display: inline-block;
+    position: absolute;
+    top: -6px;
+    left: 0;
+}
+aside .nav-toggler span{
+    background-color: red;
+}
+aside .nav-toggler span, aside .nav-toggler span::before, aside .nav-toggler span::after {
+    background-color: red;
+}
 aside nav{
     list-style: none;
     padding: 0;
-    margin: 60px 0;
+    margin: 100px 0;
 }
 aside nav li {
     display: block;
@@ -94,18 +174,25 @@ aside nav li a{
     display: block;
     font-size: 16px;
     color: seashell;
-    font-weight: 600;
+    font-weight: 400;
     text-decoration: none;
     line-height: 1.5;
     border-bottom: 1px solid rgb(122, 62, 62);
-    -webkit-transition: all 0.5 ease-in-out;
-    transition: all 0.5 ease-in-out;
+    -webkit-transition: all 0.3 ease-in-out;
+    transition: all 0.3 ease-in-out;
+    text-transform: capitalize;
 
 }
 aside nav li a:hover{
     padding-left: 5px;
     color: red;
 
+}
+aside nav li a.active{    
+    color: red;
+}
+aside nav li a:not(.active):hover{
+    padding-left: 5px;
 }
 
 aside nav li a .fa{
@@ -115,18 +202,33 @@ aside nav li a .fa{
 
 
 aside .copyright-text{
-    background-color: rgb(122, 62, 62);
-}
-.section{
-    background-color: rgb(236, 200, 200);
-    color: rgb(0, 0, 0);
-    min-height: 100vh;
-    display: block;
-
-
+    font-size: 9px;
+    color: rgb(236, 200, 200);
 }
 
-.content{
-    padding-left: 270px;
-}
 /* Home section styles */
+
+
+.home{
+    /* min-height: 100vh; */
+}
+
+.home .intro {
+    text-align: center;
+}
+
+.home .intro img {
+    text-align: center;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    display: inline-block;
+    border: 8px solid white;
+}
+
+.home .intro h1{
+    font-size: 30px;
+    font-weight: 700;
+    font-family: sans-serif;
+    color: red;
+}
