--- a/HTML/Task3/assets/css/index.css
+++ b/HTML/Task3/assets/css/index.css
@@ -233,3 +233,17 @@ aside .copyright-text{
     color: red;
     margin: 20px 0 5px;
 }
+
+.home .intro p{
+    font-size: 16px;
+    font-weight: 500;
+    font-family: sans-serif;
+    color: red;
+    margin: 0px;
+    line-height: 22px;
+
+}
+
+.home .intro .social{
+    margin-top: 28px;
+}
