--- a/HTML/Task3/sample.css
+++ b/HTML/Task3/sample.css
@@ -1,7 +1,26 @@
- <div class="container">
-                    <div class="intro" style="z-index: 1; position: absolute; top: 30px; margin: 150px 50px;">                        
-                        <h1 style="padding: 10px; margin: 20px;">Hi,</h1>
-                        <p>I am an Enterprise Support Engineer turned Software Engineer</p>
-                    </div>
-                    <img src="./assets/imgs/work.jpg" width="100%" alt="Profile Image">
-                </div>
+<div class="container">
+    <div class="intro" style="z-index: 1; position: absolute; top: 30px; margin: 150px 50px;">                        
+        <h1 style="padding: 10px; margin: 20px;">Hi,</h1>
+        <p>I am an Enterprise Support Engineer turned Software Engineer</p>
+    </div>
+    <img src="./assets/imgs/work.jpg" width="100%" alt="Profile Image">
+    <div class="social">
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+    </div>
+</div>
+
+
+<div class="intro" style="z-index: 1; position: absolute; top: 30px; margin: 150px 50px;">                        
+<h1 style="padding: 10px; margin: 20px;">Hi,</h1>
+<p>I am an Enterprise Support Engineer turned Software Engineer</p>
+</div>
+<img src="./assets/imgs/work.jpg" width="50%" alt="Profile Image">
+<div class="social">
+<a href="#"><i class="fa fa-twitter"></i></a>
+<a href="#"><i class="fa fa-facebook"></i></a>
+<a href="#"><i class="fa fa-instagram"></i></a>
+<a href="#"><i class="fa fa-linkedin"></i></a>
+</div>
