--- a/csharp/WebCalculator/Views/Calculator/compute.cshtml
+++ b/csharp/WebCalculator/Views/Calculator/compute.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-6">Find the highest number square root:</h1>
 </div>
 
-<div class="text-center">
+<div class="container text-center">
     <form asp-controller="Calculator" asp-action="compute" method="POST">
         <input type="text" name="firstNumber" placeholder="Number 1" autocomplete="OFF" />
         <input type="text" name="secondNumber" placeholder="Number 2" autocomplete="OFF" />
