fix: fxing exception

--- a/csharp/WebCalculator/Views/Calculator/compute.cshtml
+++ b/csharp/WebCalculator/Views/Calculator/compute.cshtml
@@ -37,7 +37,8 @@
 @{
     if (ViewBag.Result != null)
     {
-        <div class="text-center text-success mt-2">
+        
+        <div class="modal text-center text-success mt-2">
             @{
                 if (ViewBag.firstSqrtValue > ViewBag.secondSqrtValue)
                 {
