fix: fx index view

--- a/csharp/WebCalculator/Views/Calculator/compute.cshtml
+++ b/csharp/WebCalculator/Views/Calculator/compute.cshtml
@@ -38,7 +38,7 @@
     if (ViewBag.Result != null)
     {
         
-        <div class="modal text-center text-success mt-2">
+        <div class="modal modal-open text-center text-success mt-2">
             @{
                 if (ViewBag.firstSqrtValue > ViewBag.secondSqrtValue)
                 {
